--- a/p1-ouderavond/ouderavond-adil-donny-main/Project Ouderavond/Homepage/style.css
+++ b/p1-ouderavond/ouderavond-adil-donny-main/Project Ouderavond/Homepage/style.css
@@ -214,14 +214,6 @@ a.active,a:hover
     text-align-last: center;
   }
 
-  .Adil-p
-  {
-    border: 1px black;
-    text-align: center;
-    text-indent: -5px;
-    text-align-last: center;
-  }
-
   .column
   {
     float: left;
@@ -242,7 +234,7 @@ a.active,a:hover
   width: 100%;
   height: 100%;
   position: relative;
-
+  
 }
 
 .Studenten video
@@ -269,7 +261,7 @@ a.active,a:hover
 }
 .eduarte
 {
-  background-color: white;
+
   display: flex;
   justify-content: space-between;
 
@@ -322,6 +314,7 @@ a.active,a:hover
 
 .content-table tbody tr {
   border-bottom: 1px solid black;
+  background-color: white;
 
 }
 
@@ -336,9 +329,10 @@ a.active,a:hover
 
 .canvas
 {
-  background-color: white;
+  
   display: flex;
   justify-content: space-between;
+  
 
 }
 
@@ -365,7 +359,7 @@ a.active,a:hover
 
 .canvas-1
 {
-  background-color: white;
+  
   display: flex;
   justify-content: space-between;
 
@@ -394,7 +388,7 @@ a.active,a:hover
 
 .BSA
 {
-  background-color: white;
+  
   display: flex;
   justify-content: space-between;
 
@@ -422,7 +416,7 @@ a.active,a:hover
 
 .BSAA
 {
-  background-color: white;
+
   display: flex;
   justify-content: space-between;
 
@@ -482,9 +476,10 @@ a.active,a:hover
 
 .Software-text
 {
-  background-color: white;
+  
   display: flex;
   justify-content: space-between;
+  
 
 }
 
@@ -499,20 +494,28 @@ a.active,a:hover
 {
   font-weight: bold;
   margin: 0;
-  color: black;
+  color: white;
 
 }
 
 .Software-text p
 {
-  color: black;
+  color: white;
+  font-weight: bold;
 }
 
-.Javascript
+
+
+
+
+.CanvasBackg
 {
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
+  background-image: url(./blue-background-g21c9583a1_1920.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+
 
 }
 
@@ -527,18 +530,35 @@ a.active,a:hover
 {
   font-weight: bold;
   margin: 0;
-  color: black;
+  color: white;
 
 }
 
 .Javascript p
 {
-  color: black;
+  color: white;
+  font-weight: bold;
+}
+
+
+
+.Software-textt h1
+{
+  color: white;
+  font-weight: bold;
+
+}
+
+.Software-textt p
+{
+  color: white;
+  font-weight: bold;
+
 }
 
 .opleidingswijzer
 {
-  background-color: white;
+  
   display: flex;
   justify-content: space-between;
 
@@ -587,3 +607,201 @@ a.active,a:hover
 }
 
 
+
+@media (min-width: 800px)
+{
+  footer{
+    padding: 20px;
+    margin-top: 20px;
+    color: #fff;
+    background: rgb(92, 182, 212);
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    position: fixed;
+    }
+  
+    footer a
+    {
+      color: white;
+  
+  
+    }
+
+    nav
+{
+    background: rgb(92, 182, 212);
+    height: 90px;
+    width: 100%;
+    
+    
+    
+
+}
+label.logo
+{
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 80px;
+    font-weight: bold;
+}
+nav ul
+{
+    float: right;
+    margin-right: 20px;
+    
+}
+nav ul li
+{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a
+{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 4px;
+    text-transform: uppercase;
+}
+
+.Studenten
+{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  
+}
+
+.Studenten video
+{
+  width: 100%;
+  height: 100%;
+
+}
+
+}
+
+.bodybeoordeling
+{
+  background:linear-gradient(-45deg, lightblue, rgb(31, 125, 156) );
+}
+
+
+.boxb
+{
+  height: 150px;
+  width: 500px;
+  margin: 20px auto;
+ 
+
+
+}
+
+p
+{
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+}
+
+.rating
+{
+  position: relative;
+  flex-direction: row-reverse;
+  display: flex;
+  margin-top: 10px;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  background: linear-gradient(to right, #f00 , #ff0, #0f0);
+
+
+}
+
+.rating input
+{
+  display: none;
+
+}
+
+.rating label
+{
+  display: block;
+  cursor: pointer;
+  width: 50px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  background: #fff;
+  color: #000;
+  font-size: 20px;
+  border-right: 1px solid #000;
+
+}
+
+.rating input[type="radio"]:hover ~ label
+
+{
+  background: transparent;
+}
+
+.rating input[type="radio"]:checked ~ label
+{
+  background: transparent;
+}
+
+.form-container
+{
+  height: 600px;
+  width: 600px;
+  margin: 50px auto;
+
+}
+
+.form-container form
+{
+  height: 450px;
+  width: 400px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  text-transform: capitalize;
+  background: conic-gradient(from -45deg, rgb(92, 182, 212), rgb(9, 9, 182));
+  border-radius: 30px;
+  font-size: 20px;
+  color: #ffff;
+}
+
+.form-container form h3
+{
+  text-align: center;
+  font-size: 35px;
+
+}
+
+.form-container form label
+{
+  font-size: 1.3rem;
+  padding: 10px 0;
+
+
+}
+
+.form-container form input, textarea
+{
+  padding: 8px;
+  border-radius: 20px;
+  margin: 5px 0 5px 0;
+  border: black;
+}
+
+.bodybeoordeling2
+{
+  background: conic-gradient(from -45deg, pink, orange);
+}
